--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <div class="all projects">
                 <h1 class="main-headings">PROJECTS</h1>
                 <div class="project how-i-work" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings">Future Projects</h2></div>
-                <div class="project arforo" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings">Arforo</h2></div>
-                <div class="project akunted" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings">Formawa</h2></div>
-                <div class="project pure-css" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings">Design using CSS</h2></div>
+                <div class="project arforo" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings"></h2></div>
+                <div class="project akunted" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings"></h2></div>
+                <div class="project pure-css" data-tooltip="STILL ON PROGRESS..."><h2 class="sub-headings"></h2></div>
             </div>
             <div class="all about-me" id="about-me">
                 <h1 class="main-headings">ABOUT ME</h1>
